# miniature-parakeet

./: .env.example  AGENTS.md  README.md  pyproject.toml
configs/: budgets.yaml  default.yaml  prompts.yaml
data/: sample_questions.jsonl  smoke_questions.jsonl
demo/: streamlit_app.py
docs/: architecture.md  baseline_freeze.md  current_baseline_audit.md  evolution_design.md  externalization_design.md  final_report.md  replay.md  submission_checklist.md
evolution/: README.md
memory/: README.md  answer_cluster_stats.json  error_taxonomy.json  regression_cases.yaml  route_stats.json  skill_success_stats.json
scripts/: batch_solve.py  check_project_safety.py  convert_dataset.py  evaluate_results.py  export_submission.py  replay_trace.py  smoke_interns1.py
skills/: README.md  calculation.skill.md  calculus.skill.md  equation.skill.md  formatter.skill.md  geometry.skill.md  matrix.skill.md  optimization.skill.md  probability.skill.md  proof.skill.md  verifier.skill.md
tests/: test_agents_basic.py  test_budget_scheduler.py  test_cli.py  test_convert_dataset.py  test_demo_adapter.py  test_demo_smoke.py  test_docs_skeleton.py  test_evolution_skeleton.py  test_export_submission.py  test_formatter_repair.py  test_interns1_client.py  test_logging_trace.py  test_memory_hub.py  test_metrics.py  test_no_eval_usage.py  test_normalizer.py  test_pipeline_mock.py  test_pipeline_proof_formatting.py  test_pipeline_tools.py  test_project_safety.py  test_prompting.py  test_proof_guardian.py  test_protocol_schemas.py  test_python_sandbox.py  test_real_mode_contract.py  (+8 more)
(+32 files in other folders)
