[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interns1-math-agent"
version = "0.1.0"
description = "Mock-first math agent scaffold for Intern-S1 style competition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic",
  "pyyaml",
  "sympy",
  "typer",
  "rich",
  "python-dotenv",
  "requests",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "streamlit",
]

[project.scripts]
math-agent = "math_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
